feat(backend-rest): Added Monitor Endpoint
